# maze-runner-mono

./: LICENSE  README.m  README.md
apps/flask/: Procfile  main.py  requirements.txt  setup.py
apps/flask/examples/: m3.txt
apps/flask/maze-runner/: pyproject.toml
apps/flask/maze-runner/static/: styles.css
apps/flask/maze-runner/templates/: index.html
apps/flask/modules/: maze.py  node.py  runner.py
apps/next/: .gitignore  cloudbuild.yaml  dockerfile  netlify.toml  next.config.mjs  package-lock.json  package.json
apps/next/.github/workflows/: firebase-hosting-merge.yml  firebase-hosting-pull-request.yml
apps/next/components/: header.js  runner.js
apps/next/maze-runner/: .firebaserc  jsconfig.json  package-lock.json  package.json  pnpm-lock.yaml
apps/next/maze-runner/.firebase/: hosting.YnVpbGQ.cache  hosting.b3V0.cache
apps/next/maze-runner/components/: maze.js  node.js
apps/next/maze-runner/pages/: _app.js  build.js  info.js  randomizer.js
apps/next/maze-runner/styles/: theme.scss
apps/next/styles/: _appDefault.scss  global.module.scss  layout.module.scss
libs/javascript/: package.json
libs/javascript/maze-runner/: README.md  package-lock.json
libs/javascript/maze-runner/examples/: m4.txt
libs/javascript/maze-runner/src/: index.js  maze.js  quick-solver.js  runner.js
libs/javascript/src/: node.js
libs/python/examples/: m2.txt
libs/python/maze-runner/: pyproject.toml
libs/python/maze-runner/examples/: m1.txt  m5.txt
libs/python/maze_runner/: node.py
libs/react-js/maze-runner/: README.md  package.json
(+4 files in other folders)
