[tool.poetry]
name = "maze-runner"
version = "0.1.0"
description = ""
authors = ["icarus64 <ellishogan95@gmail.com>"]
readme = "README.md"

[tool.poetry.scripts]
main = "main:main"

[tool.poetry.dependencies]
python = "^3.10.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
